UC#1 Order actions

--- a/src/force-app/main/default/classes/AccountOrdersControllerTest.cls
+++ b/src/force-app/main/default/classes/AccountOrdersControllerTest.cls
@@ -1,11 +1,10 @@
 
 @IsTest
-private class AccountOrdersControllerTest {
+private class AccountOrdersControllerTest {    
     @IsTest
     static void shouldReturnOrdersByAccountId() {
         Account account = TestDataFactory.createAccount(true);
-        Contract contract = TestDataFactory.createContract(account, true);
-        TestDataFactory.createOrder(account, contract, true);
+        Order order = TestDataFactory.createOrder(account, true);
 
         List<AccountOrdersController.OrderDTO> orderDtos = AccountOrdersController.getOrders(account.Id);
 
@@ -17,10 +16,78 @@ private class AccountOrdersControllerTest {
     @IsTest
     static void shouldThrowExceptionWhenIdIsNull() {
         try {
-            List<AccountOrdersController.OrderDTO> orderDtos = AccountOrdersController.getOrders(null);
+            AccountOrdersController.getOrders(null);
             System.assert(false);
         } catch (Exception ex) {
             System.assert(true);
         }
+    }
+
+    @IsTest
+    static void shouldActivateOrder() {
+        Account account = TestDataFactory.createAccount(true);
+        Product2 product = TestDataFactory.createProduct(true);
+        PricebookEntry pricebookEntry = TestDataFactory.createPricebookEntry(product, true);
+        Order order = TestDataFactory.createOrder(account, true);
+        TestDataFactory.createOrderItem(order, pricebookEntry, true);
+
+        AccountOrdersController.OrderDTO orderDTO = new AccountOrdersController.OrderDTO(order);
+        AccountOrdersController.OrderUpdateResponse response = AccountOrdersController.activateOrder(JSON.serialize(orderDTO));
+
+        System.assertEquals(AccountOrdersController.OK_STATUS, response.status);
+
+        Order updatedOrder = OrderSelector.getInstance().getOrderById(order.Id);
+        System.assertEquals('Activated', updatedOrder.Status);
+    }
+
+    @IsTest
+    static void shouldReturnErrorWhenTryToActivateOrderInWrongStatus() {
+        Account account = TestDataFactory.createAccount(true);
+        Product2 product = TestDataFactory.createProduct(true);
+        PricebookEntry pricebookEntry = TestDataFactory.createPricebookEntry(product, true);
+        Order order = TestDataFactory.createOrder(account, true);
+        TestDataFactory.createOrderItem(order, pricebookEntry, true);
+
+        order.Status = 'Activated';
+        update order;
+
+        AccountOrdersController.OrderDTO orderDTO = new AccountOrdersController.OrderDTO(order);
+        AccountOrdersController.OrderUpdateResponse response = AccountOrdersController.activateOrder(JSON.serialize(orderDTO));
+
+        System.assertEquals(AccountOrdersController.ERROR_STATUS, response.status);
+    }
+
+    @IsTest
+    static void shouldMarkOrderAsShipped() {
+        Account account = TestDataFactory.createAccount(true);
+        Product2 product = TestDataFactory.createProduct(true);
+        PricebookEntry pricebookEntry = TestDataFactory.createPricebookEntry(product, true);
+        Order order = TestDataFactory.createOrder(account, true);
+        TestDataFactory.createOrderItem(order, pricebookEntry, true);
+
+        order.Status = 'Activated';
+        update order;
+
+        AccountOrdersController.OrderDTO orderDTO = new AccountOrdersController.OrderDTO(order);
+        AccountOrdersController.OrderUpdateResponse response = AccountOrdersController.markOrderAsShipped(JSON.serialize(orderDTO));
+
+        System.assertEquals(AccountOrdersController.OK_STATUS, response.status);
+
+        Order updatedOrder = OrderSelector.getInstance().getOrderById(order.Id);
+        System.assertEquals(true, updatedOrder.IsShipped__c);
+    }
+
+    @IsTest
+    static void shouldReturnErrorWhenTryToMarkOrderAsShippedInWrongStatus() {
+        Account account = TestDataFactory.createAccount(true);
+        Product2 product = TestDataFactory.createProduct(true);
+        PricebookEntry pricebookEntry = TestDataFactory.createPricebookEntry(product, true);
+        Order order = TestDataFactory.createOrder(account, true);
+        TestDataFactory.createOrderItem(order, pricebookEntry, true);
+
+        AccountOrdersController.OrderDTO orderDTO = new AccountOrdersController.OrderDTO(order);
+        AccountOrdersController.OrderUpdateResponse response = AccountOrdersController.markOrderAsShipped(JSON.serialize(orderDTO));
+        
+        System.assertEquals(AccountOrdersController.ERROR_STATUS, response.status);
     }
 }
