--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -12,9 +12,24 @@ public with sharing class OrderSelector {
         return instance; 
     }
 
+    public Order getOrderById(Id orderId) {
+        return [
+            SELECT OrderNumber, EffectiveDate, Status, TotalAmount, IsShipped__c
+            FROM Order
+            WHERE Id = :orderId
+        ];
+    }
+
     public Map<Id, Order> getOrdersByAccountId(Id accountId) {
         return new Map<Id, Order>([
-            SELECT OrderNumber, EffectiveDate, Status, TotalAmount
+            SELECT OrderNumber, EffectiveDate, Status, TotalAmount, IsShipped__c,
+            (
+                SELECT Title
+                FROM CombinedAttachments
+                WHERE Title LIKE 'Invoice%'
+                ORDER BY CreatedDate DESC
+                LIMIT 1
+            )
             FROM Order
             WHERE AccountId = :accountId
         ]);
