--- a/src/force-app/main/default/classes/OrderSelectorTest.cls
+++ b/src/force-app/main/default/classes/OrderSelectorTest.cls
@@ -1,10 +1,19 @@
 @IsTest
 private class OrderSelectorTest {
     @IsTest
+    static void shouldReturnOrdersById() {
+        Account account = TestDataFactory.createAccount(true);
+        Order order = TestDataFactory.createOrder(account, true);
+
+        Order foundOrder = OrderSelector.getInstance().getOrderById(order.Id);
+
+        System.assertEquals(order.Id, foundOrder.Id);
+    }
+
+    @IsTest
     static void shouldReturnOrdersByAccountId() {
         Account account = TestDataFactory.createAccount(true);
-        Contract contract = TestDataFactory.createContract(account, true);
-        TestDataFactory.createOrder(account, contract, true);
+        TestDataFactory.createOrder(account, true);
 
         List<Order> orders = OrderSelector.getInstance().getOrdersByAccountId(account.Id).values();
 
