--- a/src/force-app/main/default/classes/AccountOrdersController.cls
+++ b/src/force-app/main/default/classes/AccountOrdersController.cls
@@ -1,5 +1,9 @@
 public with sharing class AccountOrdersController {
-    private static final String ACCOUNT_ID_EMPTY_ERROR_MESSAGE = 'Account Id cannot be blank';
+    public static final String OK_STATUS = 'OK';
+    public static final String ERROR_STATUS = 'ERROR';
+    public static final String ACCOUNT_ID_EMPTY_ERROR_MESSAGE = 'Account Id cannot be blank';
+    public static final String ORDER_INVALID_STATUS_ERROR_MESSAGE = 'Order is in invalid status';
+    
     @AuraEnabled
     public static List<OrderDTO> getOrders(Id accountId) {
         try {
@@ -10,6 +14,35 @@ public with sharing class AccountOrdersController {
             return mapOrdersToDTO(orders.values());
         } catch(Exception ex) {
             throw new AuraHandledException(ex.getMessage());
+        }
+    }
+
+    @AuraEnabled
+    public static OrderUpdateResponse activateOrder(String order) {
+        OrderDTO orderDto = (OrderDTO) JSON.deserializeStrict(order, OrderDTO.class);
+        try {
+            if (orderDto.status != 'Draft') {
+                return new OrderUpdateResponse(ERROR_STATUS, ORDER_INVALID_STATUS_ERROR_MESSAGE);
+            }
+            update new Order(Id = orderDto.orderId, Status = 'Activated');
+            return new OrderUpdateResponse(OK_STATUS, null);
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
+
+    @AuraEnabled
+    public static OrderUpdateResponse markOrderAsShipped(String order) {
+        OrderDTO orderDto = (OrderDTO) JSON.deserializeStrict(order, OrderDTO.class);
+        try {
+            if (orderDto.status != 'Activated') {
+                return new OrderUpdateResponse(ERROR_STATUS, ORDER_INVALID_STATUS_ERROR_MESSAGE);
+            }
+            update new Order(Id = orderDto.orderId, IsShipped__c = true);
+            return new OrderUpdateResponse(OK_STATUS, null);
+        } catch (Exception e) {
+            System.debug(e.getMessage());
+            throw new AuraHandledException(e.getMessage());
         }
     }
 
@@ -27,6 +60,8 @@ public with sharing class AccountOrdersController {
         @AuraEnabled public String status;
         @AuraEnabled public Date startDate;
         @AuraEnabled public Decimal amount;
+        @AuraEnabled public Id lastInvoiceId;
+        @AuraEnabled public Boolean isShipped;
 
         public OrderDTO(Order order) {
             this.orderId = order.Id;
@@ -34,6 +69,18 @@ public with sharing class AccountOrdersController {
             this.status = order.Status;
             this.startDate = order.EffectiveDate;
             this.amount = order.TotalAmount;
+            this.lastInvoiceId = order.CombinedAttachments.isEmpty() ? null : order.CombinedAttachments[0].Id;
+            this.isShipped = order.IsShipped__c;
+        }
+    }
+
+    public class OrderUpdateResponse {
+        @AuraEnabled public String status;
+        @AuraEnabled public String message;
+
+        public OrderUpdateResponse(String status, String message) {
+            this.status = status;
+            this.message = message;
         }
     }
 }
