--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -14,7 +14,7 @@ public with sharing class OrderSelector {
 
     public Order getOrderById(Id orderId) {
         return [
-            SELECT OrderNumber, EffectiveDate, Status, TotalAmount, IsShipped__c
+            SELECT OrderNumber, EffectiveDate, Status, TotalAmount, LastStatusChanged__c
             FROM Order
             WHERE Id = :orderId
         ];
@@ -22,7 +22,7 @@ public with sharing class OrderSelector {
 
     public Map<Id, Order> getOrdersByAccountId(Id accountId) {
         return new Map<Id, Order>([
-            SELECT OrderNumber, EffectiveDate, Status, TotalAmount, IsShipped__c,
+            SELECT OrderNumber, EffectiveDate, Status, TotalAmount, LastStatusChanged__c,
             (
                 SELECT Title
                 FROM CombinedAttachments
