--- a/src/force-app/main/default/classes/AccountOrdersController.cls
+++ b/src/force-app/main/default/classes/AccountOrdersController.cls
@@ -11,6 +11,10 @@ public with sharing class AccountOrdersController {
         return result;
     }
 
+    public static String activateOrder(OrderDTO source, String status){}
+    
+    public static String marOrderAsShipped(OrderDTO source, String status){}
+
     public class OrderDTO {
         @AuraEnabled public Id id{get;set;}
         @AuraEnabled public Id accountId{get; set;}
