UC#2 Header actions

--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -1,5 +1,9 @@
 public with sharing class OrderSelector {
     public static Order getOrderStatusById(Id orderId) {
+        if (!Schema.sObjectType.Order.fields.Status.isUpdateable()) {
+            return null;
+        }
+
         return [
             SELECT Id, Status 
             FROM Order 
@@ -7,12 +11,24 @@ public with sharing class OrderSelector {
         ];
     }
 
+    public static List<Order> getOrdersByIds(List<Id> orderIds) {
+        if (!Schema.sObjectType.Order.fields.Status.isUpdateable()) {
+            return null;
+        }
+
+        return [
+            SELECT Id, Status 
+            FROM Order 
+            WHERE Id IN :orderIds 
+        ];        
+    }
+
     public static List<Order> getOrdersWithInvoiceInfo(Id accountId) {
         return [
             SELECT Id, OrderNumber, Status, EffectiveDate, TotalAmount, CreatedDate,  LastStatusChanged__c, 
             (SELECT Id, Title, ContentDocumentId FROM AttachedContentDocuments WHERE Title LIKE 'Invoice%') 
-            FROM Order WHERE AccountId = :accountId
+            FROM Order 
+            WHERE AccountId = :accountId
         ];
     }
-    
 }
