--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -26,7 +26,31 @@ public with sharing class OrderSelector {
     public static List<Order> getOrdersWithInvoiceInfo(Id accountId) {
         return [
             SELECT Id, OrderNumber, Status, EffectiveDate, TotalAmount, CreatedDate,  LastStatusChanged__c, 
-            (SELECT Id, Title, ContentDocumentId FROM AttachedContentDocuments WHERE Title LIKE 'Invoice%') 
+                (SELECT Id, Title, ContentDocumentId 
+                FROM AttachedContentDocuments 
+                WHERE Title LIKE 'Invoice%') 
+            FROM Order 
+            WHERE AccountId = :accountId
+            ORDER BY CreatedDate DESC
+        ];
+    }
+
+    public static List<Order> getOrdersWithInvoiceInfo(Id accountId, Integer pageSize, Integer offsetSize) {
+        return [
+            SELECT Id, OrderNumber, Status, EffectiveDate, TotalAmount, CreatedDate, LastStatusChanged__c, 
+                (SELECT Id, Title, ContentDocumentId 
+                 FROM AttachedContentDocuments 
+                 WHERE Title LIKE 'Invoice%') 
+            FROM Order 
+            WHERE AccountId = :accountId
+            ORDER BY CreatedDate DESC
+            LIMIT :pageSize OFFSET :offsetSize
+        ];
+    }
+
+    public static Integer getOrderCountByAccountId(Id accountId) {
+        return [
+            SELECT COUNT() 
             FROM Order 
             WHERE AccountId = :accountId
         ];
