UC#1 Order Actions (bugfixes, improvements, implementation; ~2.5h).

--- a/src/force-app/main/default/classes/AccountOrdersController.cls
+++ b/src/force-app/main/default/classes/AccountOrdersController.cls
@@ -17,7 +17,7 @@ public with sharing class AccountOrdersController {
      * in UI-friendly format.
      * @param accountId: Account Id used for "Order" SObject records filtering.
      */
-    @AuraEnabled(cacheable=true)
+    @AuraEnabled(cacheable=false)
     public static List<OrderDTO> getOrders(Id accountId) {
         try {
             //Safety block. Ensures that 'accountId' in not blank (white space, empty (''), or null).
@@ -30,11 +30,12 @@ public with sharing class AccountOrdersController {
             }
             //Get data.
             List<OrderDTO> result = new List<OrderDTO>();
-            List<Order> orders = OrderSelector.getInstance().getOrdersByParentAccountId(ORDER_FIELDS, accountId);
-            //Safety block. Ensures that there is anything to convert.
-            for (Order o : orders) {
+            Map<Id, Order> ordersById = new Map<Id, Order>(OrderSelector.getInstance().getOrdersByParentAccountId(ORDER_FIELDS, accountId));
+            Map<Id, ContentDocumentLink> invoicesByOrderId = ContentDocumentLinkService.getInstance().getTheMostRecentInvoicesByParentId(ordersById.keySet());
+            for (Id oId : ordersById.keySet()) {
                 OrderDTO odto = new OrderDTO();
-                odto.addOrderDetails(o);
+                odto.addOrderDetails(ordersById.get(oId));
+                odto.addInvoice(invoicesByOrderId.get(oId));
                 result.add(odto);
             }
             //Return UI-friendly data.
@@ -59,7 +60,7 @@ public with sharing class AccountOrdersController {
             update orders;
             our.status = Constants.ORDER_UPDATE_STATUS_OK;
         } catch (Exception e) {
-            our.status = Constants.ORDER_UPDATE_STATUS_OK;
+            our.status = Constants.ORDER_UPDATE_STATUS_ERROR;
             our.errorMessage = e.getMessage();
         }
         return our;
@@ -80,7 +81,7 @@ public with sharing class AccountOrdersController {
             update orders;
             our.status = Constants.ORDER_UPDATE_STATUS_OK;
         } catch (Exception e) {
-            our.status = Constants.ORDER_UPDATE_STATUS_OK;
+            our.status = Constants.ORDER_UPDATE_STATUS_ERROR;
             our.errorMessage = e.getMessage();
         }
         return our;
@@ -107,17 +108,54 @@ public with sharing class AccountOrdersController {
         public Boolean canBeActivated;
         @AuraEnabled
         public Boolean canBeShipped;
+        @AuraEnabled
+        public String invoicePreviewURL;
+        @AuraEnabled
+        public String invoiceDownloadURL;
+        @AuraEnabled
+        public Boolean hasInvoice;
+        @AuraEnabled
+        public Boolean showActionsMenu;
 
         public void addOrderDetails(Order o) {
-            OrderService service = OrderService.getInstance();
+            //Safety block to avoid NLPE.
+            if (null == o) {
+                throw new IllegalArgumentException(Constants.EXCEPTION_ORDER_CANNOT_BE_NULL);
+            }
             this.recordId = o.Id;
             this.recordURL = '/' + o.Id;
             this.orderNumber = o.OrderNumber;
             this.startDate = o.EffectiveDate;
             this.status = o.Status;
             this.amount = o.TotalAmount;
-            this.canBeActivated = service.canBeActivated(o);
-            this.canBeShipped = service.canBeShipped(o);
+            this.initCanBeActivatedFlag();
+            this.initCanBeShippedFlag();
+            this.initShowActionsMenuFlag();
+        }
+
+        public void addInvoice(ContentDocumentLink cdl) {
+            //Safety block to avoid NLPE.
+            if (null == cdl) {
+                return;
+            }
+            this.hasInvoice = true;
+            this.invoicePreviewURL = '/' + cdl.ContentDocumentId;
+            this.invoiceDownloadURL
+                = Constants.CONTENT_DOCUMENT_VERSION_DOWNLOAD_LINK_TEMPLATE
+                + cdl.ContentDocument.LatestPublishedVersionId;
+            this.initShowActionsMenuFlag();
+        }
+
+        private void initCanBeActivatedFlag() {
+            this.canBeActivated = Constants.ORDER_STATUS_DRAFT.equalsIgnoreCase(this.Status);
+        }
+
+        private void initCanBeShippedFlag() {
+            this.canBeShipped = Constants.ORDER_STATUS_ACTIVATED.equalsIgnoreCase(this.Status);
+        }
+
+        private void initShowActionsMenuFlag() {
+            this.showActionsMenu = true == this.canBeActivated || true == this.canBeShipped || true == this.hasInvoice;
         }
     }
 
