UC#2 Create pagination function

--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -1,10 +1,10 @@
 public with sharing class OrderSelector {
     
-    public static List<Order> getOrdersByAccountId(Id accountId) {
+    public static List<Order> getOrdersByAccountId(Id accountId, Integer amount, Integer offset) {
         return [SELECT Id, OrderNumber, Status, EffectiveDate, LastStatusChanged__c, TotalAmount, 
         (SELECT Id, Title, ContentDocumentId FROM AttachedContentDocuments 
          WHERE Title LIKE 'Invoice%' ORDER BY CreatedDate DESC) 
-        FROM Order WHERE AccountId = :accountId];
+        FROM Order WHERE AccountId = :accountId ORDER BY OrderNumber ASC LIMIT :amount OFFSET :offset ];
     }
 
     public static List<Order> getOrdersForUpdate(List<Id> orderIds) {
